# terminusgps-install

./: .gitignore  README.md  pyproject.toml
src/: settings.py  urls.py
terminusgps_install/: apps.py  forms.py  models.py  urls.py  views.py
terminusgps_install/migrations/: 0001_initial.py
terminusgps_install/templates/terminusgps_install/: create_asset.html  dashboard.html  layout.html  scan_vin.html  scan_vin_success.html
terminusgps_install/templates/terminusgps_install/partials/: _dashboard.html  _scan_vin.html
